--- a/docs/Modelagem/2.4.ParticipacoesModelagem.md
+++ b/docs/Modelagem/2.4.ParticipacoesModelagem.md
@@ -1,32 +1,264 @@
 # 2.4. Participações (Modelagem)
 
-Breve relato sobre as participações/contribuições de cada membro à entrega. 
+## Introdução
 
-## Módulo Modelagem Estática (Foco_1)
+Este relatório organiza e detalha as contribuições individuais da equipe no desenvolvimento do projeto, com foco na elaboração de diagramas UML. Com base em critérios claros, as contribuições foram classificadas por relevância, incluindo links comprobatórios, para garantir transparência e facilitar consultas.
 
-|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link)
+A classificação considera o número de frentes do projeto abordadas por cada membro e a complexidade dos artefatos produzidos, conforme descrito abaixo:
 
-EXEMPLO:
-| Fulano  |  1. Participação na elaboração do Diagrama de Classes. | Boa | Registro nos Versionamentos do Documento de Modelagem Estática, conforme (link).
+<div align="center">
+  
+| **Legenda** | **Contribuição** |
+|:---:|:---:|
+| **Excelente** | Contribuiu em todas as frentes do projeto |
+| **Boa** | Contribuiu em apenas 2 frentes do projeto |
+| **Ok** | Contribuiu em apenas 1 frente do projeto |
+| **Péssima** | Não contribuiu com o projeto |
+</div>
 
-TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA ETAPA DA ENTREGA COM COMPROBATÓRIOS.
+## Breve Relato das Contribuições
 
+<div align="center">
 
-## Módulo Modelagem Dinâmica (Foco_2)
+| **Nome** | **Contribuição** |
+|:---:|:---:|
+| **Amanda Alves** | Excelente |
+| **Carlos Gabriel** | Excelente |
+| **Gabriel Freitas** | Excelente |
+| **Henrique Azevedo** | Excelente |
+| **Isaque Santos** | Excelente |
+| **João Pedro** | Excelente |
+| **José Filipi** | Excelente |
+| **Magno Luiz** | Excelente |
+| **Raphael Mendes** | Excelente |
+| **Rodrigo Mattos** | Excelente |
+| **Vinicius Gabriel** | Excelente |
+| **Yves Pimenta** | Excelente |
+| **Marcos Bittar** | Boa |
 
-|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link)
+</div>
 
-EXEMPLO:
-| Fulano  |  1. Participação na elaboração do Diagrama de Atividades. | Boa | Registro nos Versionamentos do Documento de Modelagem Dinâmica, conforme (link).
+## Principais Artefatos
 
-TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA ETAPA DA ENTREGA COM COMPROBATÓRIOS.
+- Diagramas UML Estáticos
+- Diagramas UML Dinâmicos
+- Diagramas UML Organizacionais
 
+## Artefatos Extras
 
-## Módulo Modelagem Organizacional OU Casos de Uso (Foco_3)
+- Cronograma
+- Tabela de Equipes
+- Hierarquia da Equipe
+- Tabela Destaque
 
-|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link)
+## Tabelas de Participações por Diagrama
 
-EXEMPLO:
-| Fulano  |  1. Participação na elaboração do Diagrama de Pacotes. | Boa | Registro nos Versionamentos do Documento de Modelagem Organizacional, conforme (link).
+### Diagrama UML Estático
 
-TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA ETAPA DA ENTREGA COM COMPROBATÓRIOS.
+<table id="tg-A3ZKJ"><tbody>
+  <tr>
+    <td>Diagrama de Classes</td>
+    <td>Diagrama de Componentes</td>
+    <td>Diagrama de Implantação</td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Amanda_Campos_DiagramaDeClasses.png" target="_blank" rel="noopener noreferrer">Amanda Alves</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Gabriel_DiagramaDeComponentes.drawio.png" target="_blank" rel="noopener noreferrer">Gabriel Freitas</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Carlos_Gabriel_DiagramaDeImplantacao.png" target="_blank" rel="noopener noreferrer">Carlos Gabriel</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Jose_Souza_Diagrama_de_Classes.png" target="_blank" rel="noopener noreferrer">José Filipi</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Joao_Pedro_DiagramaDeComponentes_Revisado.png" target="_blank" rel="noopener noreferrer">João Pedro</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Henrique_Batalha_DiagramaDeImplantacao.png" target="_blank" rel="noopener noreferrer">Henrique Azevedo</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Bittar_DiagramaDeClasses.png" target="_blank" rel="noopener noreferrer">Marcos Bittar</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Magno_DiagramaDeComponentes.png" target="_blank" rel="noopener noreferrer">Magno Luiz</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Isaque_Santos_DiagramaImplanta%C3%A7%C3%A3o.png" target="_blank" rel="noopener noreferrer">Isaque Santos</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Rodrigo_DiagramaDeClasses.png" target="_blank" rel="noopener noreferrer">Rodrigo Mattos</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Raphael_DiagramaDeComponentes.png" target="_blank" rel="noopener noreferrer">Raphael Mendes</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Vinicius_Brito_DiagramaDeImplanta%C3%A7%C3%A3o.png" target="_blank" rel="noopener noreferrer">Vinicius Gabriel</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Yves_DiagramaDeClasses.png" target="_blank" rel="noopener noreferrer">Yves Pimenta</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+</tbody></table>
+
+### Diagrama UML Dinâmico
+
+<table id="tg-C3xqI"><tbody>
+  <tr>
+    <td>Diagrama de Sequência</td>
+    <td>Diagrama de Atividades</td>
+    <td>Diagrama de Comunicação</td>
+    <td>Diagrama de Estados</td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Joao_Pedro_DiagramaDeSequencia.png" target="_blank" rel="noopener noreferrer">João Pedro</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Amanda_Campos_DiagramaDeAtividades.png" target="_blank" rel="noopener noreferrer">Amanda Alves</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Carlos_Gabriel_DiagramaDeComunicacao.png" target="_blank" rel="noopener noreferrer">Carlos Gabriel</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Henrique_Batalha_DiagramaDeEstados.png" target="_blank" rel="noopener noreferrer">Henrique Azevedo</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Rodrigo_DiagramaDeSequ%C3%AAncia.png" target="_blank" rel="noopener noreferrer">Rodrigo Mattos</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Isaque_Santos_DiagramaAtividades.png" target="_blank" rel="noopener noreferrer">Isaque Santos</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Gabriel_DiagramaDeComunicacao.drawio.png" target="_blank" rel="noopener noreferrer">Gabriel Freitas</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Jose_Souza_Diagrama_de_Estados.png" target="_blank" rel="noopener noreferrer">José Filipi</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Vinicius_Brito_DiagramaDeSequencia.png" target="_blank" rel="noopener noreferrer">Vinicius Gabriel</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Bittar_DiagramaDeAtividades.png" target="_blank" rel="noopener noreferrer">Marcos Bittar</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Magno_DiagramaDeComunicao.png" target="_blank" rel="noopener noreferrer">Magno Luiz</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Raphael_DiagramaDeEstados.png" target="_blank" rel="noopener noreferrer">Raphael Mendes</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Yves_DiagramaDeSequencia.png" target="_blank" rel="noopener noreferrer">Yves Pimenta</a></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+</tbody></table>
+
+### Diagrama UML Organizacional
+
+<table id="tg-qcQ8g"><tbody>
+  <tr>
+    <td>Diagrama de Pacotes</td>
+    <td>Diagrama de Casos de Uso</td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Amanda_Campos_DiagramaDePacotes.png" target="_blank" rel="noopener noreferrer">Amanda Alves</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Carlos_Gabriel_DiagramaDeCasosDeUso.png" target="_blank" rel="noopener noreferrer">Carlos Gabriel</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Gabriel_DiagramaDePacotes.drawio.png" target="_blank" rel="noopener noreferrer">Gabriel Freitas</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Henrique_Batalha_DiagramaDeCasosDeUso.png" target="_blank" rel="noopener noreferrer">Henrique Azevedo</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Jose_Souza_Diagrama_de_Pacotes.png" target="_blank" rel="noopener noreferrer">José Filipi</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Isaque_Santos_DiagramaCasosdeUso.png" target="_blank" rel="noopener noreferrer">Isaque Santos</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Magno_DiagramaDePacotes.png" target="_blank" rel="noopener noreferrer">Magno Luiz</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Joao_Pedro_DiagramaDeCasosDeUso.png" target="_blank" rel="noopener noreferrer">João Pedro</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Raphael_DiagramaDePacotes.png" target="_blank" rel="noopener noreferrer">Raphael Mendes</a></td>
+    <td>Marcos Bittar*</td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Vinicius_Brito_DiagramaDePacotes.png" target="_blank" rel="noopener noreferrer">Vinicius Gabriel</a></td>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Rodrigo_DiagramaDeCasosDeUso.png" target="_blank" rel="noopener noreferrer">Rodrigo Mattos</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Yves_DiagramaDePacotes.png" target="_blank" rel="noopener noreferrer">Yves Pimenta</a></td>
+    <td></td>
+  </tr>
+</tbody></table>
+
+**Incompleto ou não entregue.*
+
+## Tabela de Diagramas por Participações
+
+### Amanda Alves
+| **Tipo de Diagrama**            | **Diagrama(s)**                        |
+|---------------------------------|----------------------------------------|
+| **Diagrama UML Estático**       | [Diagrama de Classes](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Amanda_Campos_DiagramaDeClasses.png) |
+| **Diagrama UML Dinâmico**       | [Diagrama de Atividades](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Amanda_Campos_DiagramaDeAtividades.png) |
+| **Diagrama UML Organizacional** | [Diagrama de Pacotes](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Amanda_Campos_DiagramaDePacotes.png) |
+
+### Carlos Gabriel
+| **Tipo de Diagrama**            | **Diagrama(s)**                        |
+|---------------------------------|----------------------------------------|
+| **Diagrama UML Estático**       | [Diagrama de Implantação](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Carlos_Gabriel_DiagramaDeImplantacao.png) |
+| **Diagrama UML Dinâmico**       | [Diagrama de Comunicação](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Carlos_Gabriel_DiagramaDeComunicacao.png) |
+| **Diagrama UML Organizacional** | [Diagrama de Casos de Uso](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Carlos_Gabriel_DiagramaDeCasosDeUso.png) |
+
+### Gabriel Freitas
+| **Tipo de Diagrama**            | **Diagrama(s)**                        |
+|---------------------------------|----------------------------------------|
+| **Diagrama UML Estático**       | [Diagrama de Componentes](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Gabriel_DiagramaDeComponentes.drawio.png) |
+| **Diagrama UML Dinâmico**       | [Diagrama de Comunicação](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Gabriel_DiagramaDeComunicacao.drawio.png) |
+| **Diagrama UML Organizacional** | [Diagrama de Pacotes](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Gabriel_DiagramaDePacotes.drawio.png) |
+
+### Henrique Azevedo
+| **Tipo de Diagrama**            | **Diagrama(s)**                        |
+|---------------------------------|----------------------------------------|
+| **Diagrama UML Estático**       | [Diagrama de Implantação](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Henrique_Batalha_DiagramaDeImplantacao.png) |
+| **Diagrama UML Dinâmico**       | [Diagrama de Estados](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Henrique_Batalha_DiagramaDeEstados.png) |
+| **Diagrama UML Organizacional** | [Diagrama de Casos de Uso](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Henrique_Batalha_DiagramaDeCasosDeUso.png) |
+
+### Isaque Santos
+| **Tipo de Diagrama**            | **Diagrama(s)**                        |
+|---------------------------------|----------------------------------------|
+| **Diagrama UML Estático**       | [Diagrama de Implantação](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Isaque_Santos_DiagramaImplanta%C3%A7%C3%A3o.png) |
+| **Diagrama UML Dinâmico**       | [Diagrama de Atividades](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Isaque_Santos_DiagramaAtividades.png) |
+| **Diagrama UML Organizacional** | [Diagrama de Casos de Uso](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Isaque_Santos_DiagramaCasosdeUso.png) |
+
+### João Pedro
+| **Tipo de Diagrama**            | **Diagrama(s)**                        |
+|---------------------------------|----------------------------------------|
+| **Diagrama UML Estático**       | [Diagrama de Componentes](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Joao_Pedro_DiagramaDeComponentes_Revisado.png) |
+| **Diagrama UML Dinâmico**       | [Diagrama de Sequência](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Joao_Pedro_da_Silva_DiagramaDeSequencia.png) |
+| **Diagrama UML Organizacional** | [Diagrama de Casos de Uso](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Joao_Pedro_da_Silva_DiagramaDeCasosDeUso.png) |
+
+### José Filipi
+| **Tipo de Diagrama**            | **Diagrama(s)**                        |
+|---------------------------------|----------------------------------------|
+| **Diagrama UML Estático**       | [Diagrama de Classes](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Jose_Souza_Diagrama_de_Classes.png) |
+| **Diagrama UML Dinâmico**       | [Diagrama de Estados](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Jose_Souza_Diagrama_de_Estados.png) |
+| **Diagrama UML Organizacional** | [Diagrama de Pacotes](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Jose_Souza_Diagrama_de_Pacotes.png) |
+
+### Magno Luiz
+| **Tipo de Diagrama**            | **Diagrama(s)**                        |
+|---------------------------------|----------------------------------------|
+| **Diagrama UML Estático**       | [Diagrama de Componentes](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Magno_DiagramaDeComponentes.png) |
+| **Diagrama UML Dinâmico**       | [Diagrama de Comunicação](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Magno_DiagramaDeComunicao.png) |
+| **Diagrama UML Organizacional** | [Diagrama de Pacotes](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Magno_DiagramaDePacotes.png) |
+
+### Marcos Bittar
+| **Tipo de Diagrama**            | **Diagrama(s)**                        |
+|---------------------------------|----------------------------------------|
+| **Diagrama UML Estático**       | [Diagrama de Classes](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Bittar_DiagramaDeClasses.png) |
+| **Diagrama UML Dinâmico**       | [Diagrama de Atividades](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Bittar_DiagramaDeAtividades.png) |
+| **Diagrama UML Organizacional** | Artefato não produzido |
+
+### Raphael Mendes
+| **Tipo de Diagrama**            | **Diagrama(s)**                        |
+|---------------------------------|----------------------------------------|
+| **Diagrama UML Estático**       | [Diagrama de Componentes](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Raphael_DiagramaDeComponentes.png) |
+| **Diagrama UML Dinâmico**       | [Diagrama de Estados](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Raphael_DiagramaDeEstados.png) |
+| **Diagrama UML Organizacional** | [Diagrama de Pacotes](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Raphael_DiagramaDePacotes.png) |
+
+### Rodrigo Mattos
+| **Tipo de Diagrama**            | **Diagrama(s)**                        |
+|---------------------------------|----------------------------------------|
+| **Diagrama UML Estático**       | [Diagrama de Classes](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Rodrigo_DiagramaDeClasses.png) |
+| **Diagrama UML Dinâmico**       | [Diagrama de Sequência](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Rodrigo_DiagramaDeSequ%C3%AAncia.png) |
+| **Diagrama UML Organizacional** | [Diagrama de Casos de Uso](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Rodrigo_DiagramaDeCasosDeUso.png) |
+
+### Vinícius Gabriel
+| **Tipo de Diagrama**            | **Diagrama(s)**                        |
+|---------------------------------|----------------------------------------|
+| **Diagrama UML Estático**       | [Diagrama de Implantação](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Vinicius_Brito_DiagramaDeImplantação.png) |
+| **Diagrama UML Dinâmico**       | [Diagrama de Sequência](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Vinicius_Brito_DiagramaDeSequencia.png) |
+| **Diagrama UML Organizacional** | [Diagrama de Pacotes](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Vinicius_Brito_DiagramaDePacotes.png) |
+
+### Yves Pimenta
+| **Tipo de Diagrama**            | **Diagrama(s)**                        |
+|---------------------------------|----------------------------------------|
+| **Diagrama UML Estático**       | [Diagrama de Classes](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Yves_DiagramaDeClasses.png) |
+| **Diagrama UML Dinâmico**       | [Diagrama de Sequência](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Yves_DiagramaDeSequencia.png) |
+| **Diagrama UML Organizacional** | [Diagrama de Pacotes](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Yves_DiagramaDePacotes.png) |
+
+## Conclusão
+Esta etapa da matéria evidenciou a diversidade e a qualidade das contribuições individuais e coletivas da equipe no desenvolvimento dos diagramas UML do projeto. Cada membro desempenhou um papel importante, que foi utilizado para demonstrar seu ponto de vista em relação a organização e execução do projeto na modelagem estática, dinâmica e organizacional.
+
+## Histórico de Versão
+| Versão | Data       | Descrição                                      | Autor               | Revisor               |
+|--------|------------|------------------------------------------------|---------------------|-----------------------|
+| 1.0    | 28/11/2024 | Primeira versão das participações | [Yves Pimenta](https://github.com/yvestxt) | [Autor](https://github.com/yvestxt)|
