finaliza a pagina `2.1.ModelagemEstatica`

--- a/docs/Modelagem/2.1.ModelagemEstatica.md
+++ b/docs/Modelagem/2.1.ModelagemEstatica.md
@@ -1,52 +1,118 @@
 # 2.1. Módulo Notação UML – Modelagem Estática
 
 ## Introdução
-Este documento descreve a modelagem UML estática para o projeto Tsirko, conforme especificado na entrega 02 da disciplin Arquitetura de Software. 
+
+Este documento descreve a modelagem UML estática para o projeto Tsírko, conforme especificado na entrega 02 da disciplina Arquitetura de Software.
 
 ### Foco 1: Modelagem UML Estática
+
 - **Entrega Mínima:** Um modelo estático, podendo ser um Diagrama de Classes, Diagrama de Componentes ou Diagrama de Implantação.
 
 ### Apresentação
+
 - **Requisitos da Apresentação:**
-    - Explicação do modelo estático especificado.
-    - Clareza sobre a participação dos membros (mostrar quadro de participações e commits).
-    - Justificativas e senso crítico sobre o modelo.
-    - Comentários gerais sobre o trabalho em equipe.
-    - **Tempo:** Aproximadamente 5 minutos.
-    - **Recomendação:** Apresentar via Wiki ou GitPages do projeto, com conteúdos baixados previamente para evitar problemas de internet.
+  - Explicação do modelo estático especificado.
+  - Clareza sobre a participação dos membros (mostrar quadro de participações e commits).
+  - Justificativas e senso crítico sobre o modelo.
+  - Comentários gerais sobre o trabalho em equipe.
+  - **Tempo:** Aproximadamente 5 minutos.
+  - **Recomendação:** Apresentar via Wiki ou GitPages do projeto, com conteúdos baixados previamente para evitar problemas de internet.
 
 ## Metodologia
 
+Para criar os diagramas UML estáticos apresentados abaixo, nós, [Marcos Bittar](https://github.com/Bittarx), [João Pedro](https://github.com/joaopedrodasilvarodrigues), [Magno Luiz](https://github.com/magnluiz) e [Vinicius Brito](https://github.com/vini051), analisamos os requisitos do projeto e as soluções propostas. Utilizando a ferramenta draw.io, identificamos os módulos fundamentais do sistema, suas interfaces, as classes e seus respectivos atributos e métodos. Representamos graficamente os componentes, estabelecendo suas relações e dependências. Após analisar os diagramas individuais feitos por cada membro de nosso grupo, consolidamos as ideias de todos nas respectivas versões finais.
+
 ## Diagrama de Classes
+
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Classes - Versão Final</p></font>
 
-![Diagrama de Classes](https://github.com/Bittarx/2024.2_G9_Tsirko_Entrega_02/blob/DiagramasEst%C3%A1ticos/docs/assets/Diagrama%20de%20ClassesFinal.png)
+![Diagrama de Classes](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Diagrama_de_ClassesFinal.png)
 
-<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/joaopedrodasilvarodrigues">João Pedro</a>, <a href="https://github.com/Bittarx">Bittar</a>, <a href="https://github.com/vini051">Vinícius Gabriel</a>, <a href="https://github.com/magnluiz">Magno Luíz</a>, 2024.</p></font> 
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Bittarx">Bittar</a>, <a href="https://github.com/joaopedrodasilvarodrigues">João Pedro</a>, <a href="https://github.com/magnluiz">Magno Luíz</a>, <a href="https://github.com/vini051">Vinícius Gabriel</a>, 2024.</p></font>
+
 </div>
 
+---
+
 ## Diagrama de Componentes
+
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Componentes - Versão Final</p></font>
 
-![Diagrama de Componentes](https://github.com/Bittarx/2024.2_G9_Tsirko_Entrega_02/blob/DiagramasEst%C3%A1ticos/docs/assets/Diagrama_de%20_Componentes_Final.drawio.png)
+![Diagrama de Componentes](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Diagrama_de_Componentes_Final.drawio.png)
 
-<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/joaopedrodasilvarodrigues">João Pedro</a>, <a href="https://github.com/Bittarx">Bittar</a>, <a href="https://github.com/vini051">Vinícius Gabriel</a>, <a href="https://github.com/magnluiz">Magno Luíz</a>, 2024.</p></font> 
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Bittarx">Bittar</a>, <a href="https://github.com/joaopedrodasilvarodrigues">João Pedro</a>, <a href="https://github.com/magnluiz">Magno Luíz</a>, <a href="https://github.com/vini051">Vinícius Gabriel</a>, 2024.</p></font>
+
 </div>
 
-## Diagrama de Implementação
+---
+
+## Diagrama de Implantação
+
 <div align="center">
-<font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Implementação - Versão Final</p></font>
+<font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Implantação - Versão Final</p></font>
 
-![Diagrama de Implementação](https://github.com/Bittarx/2024.2_G9_Tsirko_Entrega_02/blob/DiagramasEst%C3%A1ticos/docs/assets/Diagrama_de_Implatacao_Final.drawio.png)
+![Diagrama de Implementação](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Diagrama_de_Implatacao_Final.drawio.png)
 
-<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/joaopedrodasilvarodrigues">João Pedro</a>, <a href="https://github.com/Bittarx">Bittar</a>, <a href="https://github.com/vini051">Vinícius Gabriel</a>, <a href="https://github.com/magnluiz">Magno Luíz</a>, 2024.</p></font> 
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Bittarx">Bittar</a>, <a href="https://github.com/joaopedrodasilvarodrigues">João Pedro</a>, <a href="https://github.com/magnluiz">Magno Luíz</a>, <a href="https://github.com/vini051">Vinícius Gabriel</a>, 2024.</p></font>
+
 </div>
+
+---
+
 ## Análise e Resultado
 
+A análise dos diagramas apresentados revela a estrutura completa do sistema Tsírko em diferentes níveis de abstração, desde sua organização lógica até sua implementação física.
+
+**Diagrama de Classes:**
+
+Apresenta a estrutura central do sistema com a classe Pessoa como base, da qual derivam as especializações Artista, Admin e Usuário.
+
+Define relacionamentos importantes como:
+
+- Usuários podem se matricular em aulas com modalidades e acessar informativos de espetáculos;
+- Circos podem possuir vários espetáculos e estão associados a locais específicos;
+- Artistas possuem com modalidades e participam de espetáculos.
+
+Também inclui classes essenciais para o negócio como Espetáculo, Modalidade e Local, cada uma com seus atributos e métodos específicos.
+
+---
+
+**Diagrama de Implantação:**
+
+Mostra a arquitetura física distribuída do sistema com três camadas principais:
+
+- Dispositivo do Usuário: contendo browser e aplicativo móvel;
+- Camada de Proxy: implementando load balancer, cache e firewall;
+- Servidor Web: utilizando Apache e hospedando as APIs.
+
+Integra serviços externos essenciais:
+
+- Servidor de Banco de Dados com módulos específicos (Cadastro, Vendas, Wiki);
+- Serviços de Pagamento, Notificações (Twilio) e Mapas (Google Maps).
+
+---
+
+**Diagrama de Componentes:**
+
+Estrutura o sistema em módulos funcionais bem definidos:
+
+- Gerenciamento de Contas: controlando acesso de usuários e administradores;
+- Gerenciamento de Eventos: administrando espetáculos e modalidades;
+- Gerenciamento de Pagamentos: processando transações.
+
+Demonstra interfaces claras entre componentes:
+
+- Interfaces requeridas e fornecidas bem definidas;
+- Dependências entre módulos explicitamente marcadas;
+- Portas de comunicação estabelecidas para interação entre componentes.
+
+---
+
 ## Histórico de Versão
-| Versão | Data       | Descrição                                      | Autor               | Revisor               |
-|--------|------------|------------------------------------------------|---------------------|-----------------------|
-| 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
-| 1.1    | 23/11/2024 | Diagramas adicionados| [Bittar](https://github.com/Bittarx) | [Yves](https://github.com/Yvestxt) |
+
+| Versão | Data       | Descrição                       | Autor                                  | Revisor                                                    |
+| ------ | ---------- | ------------------------------- | -------------------------------------- | ---------------------------------------------------------- |
+| 2.0    | 28/11/2024 | Correção de algumas informações | [Vinicius](https://github.com/vini051) | [João Pedro](https://github.com/joaopedrodasilvarodrigues) |
+| 1.1    | 23/11/2024 | Diagramas adicionados           | [Bittar](https://github.com/Bittarx)   | [Yves](https://github.com/Yvestxt)                         |
