--- a/docs/Modelagem/2.1.1.DiagramaDeClasses.md
+++ b/docs/Modelagem/2.1.1.DiagramaDeClasses.md
@@ -56,8 +56,8 @@ A partir dos requisitos levantados, os alunos Amanda, José Felipe, Rodrigo, Mar
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Classes Yves Gustavo Ribeiro Pimenta</p></font>
 
-![Figura1](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Yves_Diagrama.png)
-<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Bittarx">Marcos Santos Bittar</a></p></font> 
+![Figura1](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Yves_DiagramaDeClasses.png)
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Yvestxt">Yves Gustavo Ribeiro Pimenta</a></p></font> 
 </div>
 
 
@@ -65,7 +65,25 @@ A partir dos requisitos levantados, os alunos Amanda, José Felipe, Rodrigo, Mar
 
 ## Análise e Resultado
 
+
+Os diagramas fornecem uma visão abrangente sobre o projeto e revelam aspectos importantes de seu design, estrutura e objetivos. Todos os diagramas refletem sistemas robustos e bem organizados. Cada um tem seus pontos fortes em modularidade e detalhamento. 
+
+O diagrama do [Yves](https://github.com/Yvestxt) parece representar um sistema de gerenciamento de circo e eventos, com um foco em entidades como artistas, aulas, usuários e notificações. As classes refletem bem o domínio do problema (circo, eventos, aulas). Nomes de classes, atributos e métodos são autoexplicativos e de fácil compreensão.
+
+O diagrama do [Rodrigo](https://github.com/Rodrigomfab88) parece focar em um sistema de gerenciamento de ingressos e eventos, com destaque para a interação do usuário com locais e eventos. Relações claras, como entre Usuario e Bilheteria (usuário utiliza a bilheteria para gerenciar ingressos). Uso de dependência entre Aula e Evento, indicando que aulas podem ser relacionadas a eventos.
+
+O diagrama do [José](https://github.com/JoseFilipi) parece ser o mais complexo e detalhado, abrangendo funcionalidades como mapas interativos, notificações, avaliações e votações. O diagrama cobre muitas funcionalidades do sistema, o que é uma força para projetos maiores. 
+
+O diagrama da [Amanda](https://github.com/acamposs) apresenta atributos e métodos bem definidos e possui um uso consistente de multiplicidades.
+
+O diagrama do [Bittar](https://github.com/Bittarx) possui métodos que representam bem as funcionalidades do domínio.
+
+
+
+
 ## Histórico de Versão
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
 | 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
+| 1.1    | 28/11/2024 | Construção dos diagramas individuais de classes | [Amanda Campos](https://github.com/acamposs), [José Filipe](https://github.com/JoseFilipi), [Rodrigo Mattos](https://github.com/Rodrigomfab88), [Marcos Santos Bittar](https://github.com/Bittarx) e [Yves Gustavo](https://github.com/Yvestxt)  | [Autor](https://github.com/autor) |
+| 1.2    | 28/11/2024 | Versão final do artefato | [Vinícius Brito](https://github.com/vini051)                                                                                                                                       | [João](https://github.com/joaopedrodasilvarodrigues) |
