--- a/docs/Modelagem/2.2.2.DiagramaDeAtividades.md
+++ b/docs/Modelagem/2.2.2.DiagramaDeAtividades.md
@@ -53,6 +53,12 @@ Cada diagrama desenvolvido possui suas características e diversidades que, em m
 - É um diagrama mais simples, mas que apresenta uma ideia que já estava sendo utilizada em partes nos outros dois diagramas, mas tem seu grau de importância para esse artefato.
 
 
+## Referência Bibliográfica
+> UNB. Aula Modelagem UML Dinâmica. Professora Milene. Disponível em: https://arquivos.unb.br/arquivos/2024159118945d30645175f6a9bd650b0/Arquitetura_e_Desenho_de_Software_-_Aula_Modelagem_UML_Dinmica_-_Profa._Milene.pdf. Acesso em: 28 nov. 2024.
+
+> UML DIAGRAMS. Disponível em: https://www.uml-diagrams.org/. Acesso em: 28 nov. 2024.
+
+
 ## Histórico de Versão
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
