--- a/docs/Modelagem/2.2.ModelagemDinamica.md
+++ b/docs/Modelagem/2.2.ModelagemDinamica.md
@@ -176,3 +176,4 @@ Na **figura 5** é possível visualizar a versão final do diagrama.
 | 2.0    | 27/11/2024 | Adição Diagrama de Comunicação | [Carlos Gabriel](https://github.com/TheCarlosRamos) | [Amanda Campos](https://github.com/acamposs) [Isaque Santos](https://github.com/IsaqueSH") [Rodrigo Mattos](https://github.com/Rodrigomfab88) |
 | 3.0    | 28/11/2024 | Adição Diagrama de Estados | [Amanda Campos](https://github.com/acamposs) | [Carlos Gabriel](https://github.com/TheCarlosRamos) [Isaque Santos](https://github.com/IsaqueSH") [Rodrigo Mattos](https://github.com/Rodrigomfab88) |
 | 4.0    | 28/11/2024 | Adição Diagrama de Sequência | [Rodrigo Mattos](https://github.com/Rodrigomfab88) | [Carlos Gabriel](https://github.com/TheCarlosRamos) [Isaque Santos](https://github.com/IsaqueSH") [Amanda Campos](https://github.com/acamposs) |
+| 5.0    | 28/11/2024 | Adição Diagrama de Atividades | [Isaque Santos](https://github.com/IsaqueSH")  | [Carlos Gabriel](https://github.com/TheCarlosRamos) [Amanda Campos](https://github.com/acamposs) [Rodrigo Mattos](https://github.com/Rodrigomfab88) |
