--- a/docs/Modelagem/2.2.ModelagemDinamica.md
+++ b/docs/Modelagem/2.2.ModelagemDinamica.md
@@ -59,7 +59,7 @@ Na **figura 2** é possível visualizar a versão final do diagrama.
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 1:</b><a href=""> Versão Final do Diagrama de Atividades</a></p></font>
 
-![Diagrama de Atividades]()
+![Diagrama de Atividades](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/Vers%C3%A3oFinal_DiagramadeAtividades.png)
 
 <font size="3"><p style="text-align: center"><b>Autor(es):</b> 
 <a href="https://github.com/acamposs">Amanda Campos</a>, 
