--- a/docs/Modelagem/2.5.IniciativasExtras.md
+++ b/docs/Modelagem/2.5.IniciativasExtras.md
@@ -28,6 +28,23 @@ Cada sublíder assumiu a responsabilidade de:
 - Assegurar que os objetivos da área fossem atingidos dentro do prazo.
 - Estimular a participação dos membros e resolver dúvidas técnicas ou organizacionais.
 
+## DE-R(Diagrama Entidade-Relacionamento) do Banco de Dados 
+
+O DER é uma ferramenta fundamental para projetar e entender a estrutura lógica de um banco de dados. Ele garante que o sistema de armazenamento de dados seja eficiente, livre de redundâncias e alinhado às necessidades do negócio, servindo como um elo entre a modelagem conceitual e a implementação prática.
+
+
+![Equipes](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/DER.png)
+
+<div align="center"><font size="3"><p style="text-align: center"><b>Autor:</b> 
+<a href="https://github.com/joaopedrodasilvarodrigues">João Pedro</a></p></font></div>
+
+
+<div align="center"><font size="3"><p style="text-align: center"><b>Link para o DE-R no repositório:</b> 
+<a href="https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/DER.png" target="_blank" rel="noopener noreferrer">DE-R</a></p></font></div>
+
+
+
+
 ## Histórico de Versão
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
